--- a/mod/utc/gabel_blacksmith.utc.yml
+++ b/mod/utc/gabel_blacksmith.utc.yml
@@ -88,8 +88,8 @@ hash: !ruby/object:NWN::Gff::Struct
       str_ref: 4294967295
       type: :cexolocstr
       value: !ruby/object:NWN::Gff::CExoLocString 
-        languages: 
-          4: ""
+        languages: {}
+
     LawfulChaotic: !ruby/object:NWN::Gff::Element {label: LawfulChaotic, type: :byte, value: 50}
     Lootable: !ruby/object:NWN::Gff::Element {label: Lootable, type: :byte, value: 0}
     MaxHitPoints: !ruby/object:NWN::Gff::Element {label: MaxHitPoints, type: :short, value: 2}
@@ -156,7 +156,7 @@ hash: !ruby/object:NWN::Gff::Struct
     Str: !ruby/object:NWN::Gff::Element {label: Str, type: :byte, value: 6}
     Subrace: !ruby/object:NWN::Gff::Element {label: Subrace, type: :cexostr, value: ""}
     Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: gabel_blacksmith}
-    Tail: !ruby/object:NWN::Gff::Element {label: Tail, type: :byte, value: 205}
+    Tail_New: !ruby/object:NWN::Gff::Element {label: Tail_New, type: :dword, value: 0}
     TemplateList: !ruby/object:NWN::Gff::Element 
       label: TemplateList
       type: :list
@@ -164,7 +164,7 @@ hash: !ruby/object:NWN::Gff::Struct
 
     TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: gabel_blacksmith}
     WalkRate: !ruby/object:NWN::Gff::Element {label: WalkRate, type: :int, value: 7}
-    Wings: !ruby/object:NWN::Gff::Element {label: Wings, type: :byte, value: 205}
+    Wings_New: !ruby/object:NWN::Gff::Element {label: Wings_New, type: :dword, value: 0}
     Wis: !ruby/object:NWN::Gff::Element {label: Wis, type: :byte, value: 10}
     fortbonus: !ruby/object:NWN::Gff::Element {label: fortbonus, type: :short, value: 0}
     refbonus: !ruby/object:NWN::Gff::Element {label: refbonus, type: :short, value: 0}
