Wildnis-Timrryl: fix key inside

--- a/mod/area/wildnis_timrryl.git.yml
+++ b/mod/area/wildnis_timrryl.git.yml
@@ -50,7 +50,7 @@ hash: !ruby/object:NWN::Gff::Struct
           HP: !ruby/object:NWN::Gff::Element {label: HP, type: :short, value: 50}
           Hardness: !ruby/object:NWN::Gff::Element {label: Hardness, type: :byte, value: 5}
           Interruptable: !ruby/object:NWN::Gff::Element {label: Interruptable, type: :byte, value: 1}
-          KeyName: !ruby/object:NWN::Gff::Element {label: KeyName, type: :cexostr, value: key_timmryl}
+          KeyName: !ruby/object:NWN::Gff::Element {label: KeyName, type: :cexostr, value: key_timrryl}
           KeyRequired: !ruby/object:NWN::Gff::Element {label: KeyRequired, type: :byte, value: 0}
           LinkedTo: !ruby/object:NWN::Gff::Element {label: LinkedTo, type: :cexostr, value: wildnis01_2_timrryl}
           LinkedToFlags: !ruby/object:NWN::Gff::Element {label: LinkedToFlags, type: :byte, value: 1}
