Wildnis-Timrryl: move to nord_04, farther away from town

--- a/mod/area/wildnis_timrryl.git.yml
+++ b/mod/area/wildnis_timrryl.git.yml
@@ -32,7 +32,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 0}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 3.1416}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -3.1416}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 30}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
           CurrentHP: !ruby/object:NWN::Gff::Element {label: CurrentHP, type: :short, value: 50}
@@ -52,7 +52,7 @@ hash: !ruby/object:NWN::Gff::Struct
           Interruptable: !ruby/object:NWN::Gff::Element {label: Interruptable, type: :byte, value: 1}
           KeyName: !ruby/object:NWN::Gff::Element {label: KeyName, type: :cexostr, value: key_timrryl}
           KeyRequired: !ruby/object:NWN::Gff::Element {label: KeyRequired, type: :byte, value: 0}
-          LinkedTo: !ruby/object:NWN::Gff::Element {label: LinkedTo, type: :cexostr, value: wildnis01_2_timrryl}
+          LinkedTo: !ruby/object:NWN::Gff::Element {label: LinkedTo, type: :cexostr, value: nord_04_2_wildnis_timrryl}
           LinkedToFlags: !ruby/object:NWN::Gff::Element {label: LinkedToFlags, type: :byte, value: 1}
           LoadScreenID: !ruby/object:NWN::Gff::Element {label: LoadScreenID, type: :word, value: 0}
           LocName: !ruby/object:NWN::Gff::Element 
@@ -82,7 +82,7 @@ hash: !ruby/object:NWN::Gff::Struct
           Plot: !ruby/object:NWN::Gff::Element {label: Plot, type: :byte, value: 0}
           PortraitId: !ruby/object:NWN::Gff::Element {label: PortraitId, type: :word, value: 0}
           Ref: !ruby/object:NWN::Gff::Element {label: Ref, type: :byte, value: 0}
-          Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: wildnis_timmryl_2_wildnis01}
+          Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: wildnis_timrryl_2_nord_04}
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: house_door}
           TrapDetectDC: !ruby/object:NWN::Gff::Element {label: TrapDetectDC, type: :byte, value: 0}
           TrapDetectable: !ruby/object:NWN::Gff::Element {label: TrapDetectable, type: :byte, value: 1}
@@ -96,9 +96,9 @@ hash: !ruby/object:NWN::Gff::Struct
             value: 
             - !ruby/object:NWN::Gff::Struct 
               hash: 
-                Name: !ruby/object:NWN::Gff::Element {label: Name, type: :cexostr, value: wache}
-                Type: !ruby/object:NWN::Gff::Element {label: Type, type: :dword, value: 3}
-                Value: !ruby/object:NWN::Gff::Element {label: Value, type: :cexostr, value: sl_}
+                Name: !ruby/object:NWN::Gff::Element {label: Name, type: :cexostr, value: arcane_lock}
+                Type: !ruby/object:NWN::Gff::Element {label: Type, type: :dword, value: 1}
+                Value: !ruby/object:NWN::Gff::Element {label: Value, type: :int, value: 1047}
               struct_id: 0
           Will: !ruby/object:NWN::Gff::Element {label: Will, type: :byte, value: 0}
           X: !ruby/object:NWN::Gff::Element {label: X, type: :float, value: 25.0}
@@ -110,7 +110,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 2}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 0}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -3.1416}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 3.1416}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
           CurrentHP: !ruby/object:NWN::Gff::Element {label: CurrentHP, type: :short, value: 15}
