list_select: provide abort/end script hook functionality

--- a/mod/dlg/list_select.dlg.yml
+++ b/mod/dlg/list_select.dlg.yml
@@ -5,8 +5,8 @@ hash: !ruby/object:NWN::Gff::Struct
   hash: 
     DelayEntry: !ruby/object:NWN::Gff::Element {label: DelayEntry, type: :dword, value: 0}
     DelayReply: !ruby/object:NWN::Gff::Element {label: DelayReply, type: :dword, value: 0}
-    EndConverAbort: !ruby/object:NWN::Gff::Element {label: EndConverAbort, type: :resref, value: nw_walk_wp}
-    EndConversation: !ruby/object:NWN::Gff::Element {label: EndConversation, type: :resref, value: nw_walk_wp}
+    EndConverAbort: !ruby/object:NWN::Gff::Element {label: EndConverAbort, type: :resref, value: list_select_abrt}
+    EndConversation: !ruby/object:NWN::Gff::Element {label: EndConversation, type: :resref, value: list_select_end}
     EntryList: !ruby/object:NWN::Gff::Element 
       label: EntryList
       type: :list
