nss/Makefile clean-stale: remove compiled scripts without matching source

--- a/mod/nss/Makefile
+++ b/mod/nss/Makefile
@@ -44,3 +44,6 @@ tags:
 
 clean:
 	-rm *.nss *.ncs *.ndb
+
+clean-stale:
+	@for x in *.n[cs]s; do [ -f `echo $$x |cut -d. -f1`.n ] || rm -v $$x; done
