Gabel-NW: mark Schild Schmied as nonstatic, useable, fix name

--- a/mod/area/gabel_nw.git.yml
+++ b/mod/area/gabel_nw.git.yml
@@ -16150,8 +16150,7 @@ hash: !ruby/object:NWN::Gff::Struct
             type: :cexolocstr
             value: !ruby/object:NWN::Gff::CExoLocString 
               languages: 
-                4: Schild Schmied
-                5: Schild Schmied
+                0: Schmiede
           Lockable: !ruby/object:NWN::Gff::Element {label: Lockable, type: :byte, value: 1}
           Locked: !ruby/object:NWN::Gff::Element {label: Locked, type: :byte, value: 0}
           OnClick: !ruby/object:NWN::Gff::Element {label: OnClick, type: :resref, value: ""}
@@ -16173,7 +16172,7 @@ hash: !ruby/object:NWN::Gff::Struct
           Plot: !ruby/object:NWN::Gff::Element {label: Plot, type: :byte, value: 0}
           PortraitId: !ruby/object:NWN::Gff::Element {label: PortraitId, type: :word, value: 0}
           Ref: !ruby/object:NWN::Gff::Element {label: Ref, type: :byte, value: 0}
-          Static: !ruby/object:NWN::Gff::Element {label: Static, type: :byte, value: 1}
+          Static: !ruby/object:NWN::Gff::Element {label: Static, type: :byte, value: 0}
           Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: schild_schmied}
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: schild_schmied}
           TrapDetectDC: !ruby/object:NWN::Gff::Element {label: TrapDetectDC, type: :byte, value: 0}
@@ -16183,7 +16182,7 @@ hash: !ruby/object:NWN::Gff::Struct
           TrapOneShot: !ruby/object:NWN::Gff::Element {label: TrapOneShot, type: :byte, value: 1}
           TrapType: !ruby/object:NWN::Gff::Element {label: TrapType, type: :byte, value: 0}
           Type: !ruby/object:NWN::Gff::Element {label: Type, type: :byte, value: 0}
-          Useable: !ruby/object:NWN::Gff::Element {label: Useable, type: :byte, value: 0}
+          Useable: !ruby/object:NWN::Gff::Element {label: Useable, type: :byte, value: 1}
           Will: !ruby/object:NWN::Gff::Element {label: Will, type: :byte, value: 0}
           X: !ruby/object:NWN::Gff::Element {label: X, type: :float, value: 50.6379}
           Y: !ruby/object:NWN::Gff::Element {label: Y, type: :float, value: 43.124}
