nss/build_dep: fix critical bug that would not compile dlg conditionals
How the HELL did I miss that?

--- a/mod/nss/Makefile
+++ b/mod/nss/Makefile
@@ -43,7 +43,7 @@ tags:
 	@ctags --language-force=c --totals --c-kinds=cdefgmnpstuvx --fields=fksmnSzt global/*.h *.{n,nh,h} $(NWNHOME)/original_resources/*.nss
 
 clean:
-	-rm *.nss *.ncs *.ndb
+	-rm *.nss *.ncs *.ndb Makefile.dep
 
 clean-stale:
 	@for x in *.n[cs]s; do [ -f `echo $$x |cut -d. -f1`.n ] || rm -v $$x; done
