Gabel-Schneider: Dialogupdate

--- a/mod/dlg/gabel_schneider.dlg.yml
+++ b/mod/dlg/gabel_schneider.dlg.yml
@@ -21,6 +21,46 @@ hash: !ruby/object:NWN::Gff::Struct
           RepliesList: !ruby/object:NWN::Gff::Element 
             label: RepliesList
             type: :list
+            value: 
+            - !ruby/object:NWN::Gff::Struct 
+              hash: 
+                Active: !ruby/object:NWN::Gff::Element {label: Active, type: :resref, value: ""}
+                Index: !ruby/object:NWN::Gff::Element {label: Index, type: :dword, value: 2}
+                IsChild: !ruby/object:NWN::Gff::Element {label: IsChild, type: :byte, value: 0}
+              struct_id: 0
+            - !ruby/object:NWN::Gff::Struct 
+              hash: 
+                Active: !ruby/object:NWN::Gff::Element {label: Active, type: :resref, value: ""}
+                Index: !ruby/object:NWN::Gff::Element {label: Index, type: :dword, value: 1}
+                IsChild: !ruby/object:NWN::Gff::Element {label: IsChild, type: :byte, value: 0}
+              struct_id: 1
+            - !ruby/object:NWN::Gff::Struct 
+              hash: 
+                Active: !ruby/object:NWN::Gff::Element {label: Active, type: :resref, value: ""}
+                Index: !ruby/object:NWN::Gff::Element {label: Index, type: :dword, value: 0}
+                IsChild: !ruby/object:NWN::Gff::Element {label: IsChild, type: :byte, value: 0}
+              struct_id: 2
+          Script: !ruby/object:NWN::Gff::Element {label: Script, type: :resref, value: ""}
+          Sound: !ruby/object:NWN::Gff::Element {label: Sound, type: :resref, value: ""}
+          Speaker: !ruby/object:NWN::Gff::Element {label: Speaker, type: :cexostr, value: ""}
+          Text: !ruby/object:NWN::Gff::Element 
+            label: Text
+            str_ref: 4294967295
+            type: :cexolocstr
+            value: !ruby/object:NWN::Gff::CExoLocString 
+              languages: 
+                4: "Liira zum Gruss und seid willkommen in meinem bescheidenen kleinen Gesch\xE4ft! Edelste und feinste Stoffe f\xFCr den Herrn oder die Dame findet Ihr bei mir. Ihr sucht eine festliche Robe f\xFCr einen ebenso festlichen Anlass? Eine Reitgarnitur f\xFCr den nachmitt\xE4glichen Ausritt? Oder robuste Kleidung f\xFCr die Wanderung in Feld und Flur? Ihr werdet hier sicherlich etwas Passendes finden. Nat\xFCrlich f\xFChre ich auch dazu ausgew\xE4hltes Zubehoer wie Halst\xFCcher, Handschuhe und derlei. Seht Euch nur um! *nach dieser \xFCberschwenglichen Begr\xFCssung l\xE4chelt er Euch fr\xF6hlich an*"
+        struct_id: 0
+      - !ruby/object:NWN::Gff::Struct 
+        hash: 
+          AnimLoop: !ruby/object:NWN::Gff::Element {label: AnimLoop, type: :byte, value: 1}
+          Animation: !ruby/object:NWN::Gff::Element {label: Animation, type: :dword, value: 0}
+          Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}
+          Delay: !ruby/object:NWN::Gff::Element {label: Delay, type: :dword, value: 4294967295}
+          Quest: !ruby/object:NWN::Gff::Element {label: Quest, type: :cexostr, value: ""}
+          RepliesList: !ruby/object:NWN::Gff::Element 
+            label: RepliesList
+            type: :list
             value: []
 
           Script: !ruby/object:NWN::Gff::Element {label: Script, type: :resref, value: merchant_conv}
@@ -32,15 +72,168 @@ hash: !ruby/object:NWN::Gff::Struct
             type: :cexolocstr
             value: !ruby/object:NWN::Gff::CExoLocString 
               languages: 
-                4: "Ah, hallo, hallo, willkommen in meiner kleinen Schneiderei .. Ihr w\xFCnscht eine neue Bekleidung, einen Hut vielleicht ..? Seht Euch nur in Ruhe um, ich biete viele Dinge, doch nicht alles .. zu einem Preis."
-        struct_id: 0
-    NumWords: !ruby/object:NWN::Gff::Element {label: NumWords, type: :dword, value: 35}
+                4: "*Der Schneider wirkt sichtlich etwas schockiert \xFCber Eure schroffe Art und breitet daraufhin ohne ein weiteres Wort die Waren vor Euch aus.*"
+        struct_id: 1
+      - !ruby/object:NWN::Gff::Struct 
+        hash: 
+          AnimLoop: !ruby/object:NWN::Gff::Element {label: AnimLoop, type: :byte, value: 1}
+          Animation: !ruby/object:NWN::Gff::Element {label: Animation, type: :dword, value: 0}
+          Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}
+          Delay: !ruby/object:NWN::Gff::Element {label: Delay, type: :dword, value: 4294967295}
+          Quest: !ruby/object:NWN::Gff::Element {label: Quest, type: :cexostr, value: ""}
+          RepliesList: !ruby/object:NWN::Gff::Element 
+            label: RepliesList
+            type: :list
+            value: 
+            - !ruby/object:NWN::Gff::Struct 
+              hash: 
+                Active: !ruby/object:NWN::Gff::Element {label: Active, type: :resref, value: ""}
+                Index: !ruby/object:NWN::Gff::Element {label: Index, type: :dword, value: 4}
+                IsChild: !ruby/object:NWN::Gff::Element {label: IsChild, type: :byte, value: 0}
+              struct_id: 0
+            - !ruby/object:NWN::Gff::Struct 
+              hash: 
+                Active: !ruby/object:NWN::Gff::Element {label: Active, type: :resref, value: ""}
+                Index: !ruby/object:NWN::Gff::Element {label: Index, type: :dword, value: 3}
+                IsChild: !ruby/object:NWN::Gff::Element {label: IsChild, type: :byte, value: 0}
+              struct_id: 1
+          Script: !ruby/object:NWN::Gff::Element {label: Script, type: :resref, value: ""}
+          Sound: !ruby/object:NWN::Gff::Element {label: Sound, type: :resref, value: ""}
+          Speaker: !ruby/object:NWN::Gff::Element {label: Speaker, type: :cexostr, value: ""}
+          Text: !ruby/object:NWN::Gff::Element 
+            label: Text
+            str_ref: 4294967295
+            type: :cexolocstr
+            value: !ruby/object:NWN::Gff::CExoLocString 
+              languages: 
+                4: "Aber selbstverst\xE4ndlich. *er holt einen Ballen edlen Stoffes von einem Regal und breitet ihn vor Euch auf der Theke aus, dann folgt ein weiterer, ebenso finden Handschuhe und ein Halstuch aus dem gleichen Material ihren Platz darauf* Stoffe von dieser Qualit\xE4t findet Ihr sonst nur in Silbrigmond. Und seht Euch nur dieses Muster an, wie geschaffen f\xFCr Euch!"
+        struct_id: 2
+    NumWords: !ruby/object:NWN::Gff::Element {label: NumWords, type: :dword, value: 219}
     PreventZoomIn: !ruby/object:NWN::Gff::Element {label: PreventZoomIn, type: :byte, value: 0}
     ReplyList: !ruby/object:NWN::Gff::Element 
       label: ReplyList
       type: :list
-      value: []
+      value: 
+      - !ruby/object:NWN::Gff::Struct 
+        hash: 
+          AnimLoop: !ruby/object:NWN::Gff::Element {label: AnimLoop, type: :byte, value: 1}
+          Animation: !ruby/object:NWN::Gff::Element {label: Animation, type: :dword, value: 0}
+          Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}
+          Delay: !ruby/object:NWN::Gff::Element {label: Delay, type: :dword, value: 4294967295}
+          EntriesList: !ruby/object:NWN::Gff::Element 
+            label: EntriesList
+            type: :list
+            value: []
 
+          Quest: !ruby/object:NWN::Gff::Element {label: Quest, type: :cexostr, value: ""}
+          Script: !ruby/object:NWN::Gff::Element {label: Script, type: :resref, value: ""}
+          Sound: !ruby/object:NWN::Gff::Element {label: Sound, type: :resref, value: ""}
+          Text: !ruby/object:NWN::Gff::Element 
+            label: Text
+            str_ref: 4294967295
+            type: :cexolocstr
+            value: !ruby/object:NWN::Gff::CExoLocString 
+              languages: 
+                4: Habt Dank, doch ich sehe mich nur etwas um.
+        struct_id: 0
+      - !ruby/object:NWN::Gff::Struct 
+        hash: 
+          AnimLoop: !ruby/object:NWN::Gff::Element {label: AnimLoop, type: :byte, value: 1}
+          Animation: !ruby/object:NWN::Gff::Element {label: Animation, type: :dword, value: 0}
+          Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}
+          Delay: !ruby/object:NWN::Gff::Element {label: Delay, type: :dword, value: 4294967295}
+          EntriesList: !ruby/object:NWN::Gff::Element 
+            label: EntriesList
+            type: :list
+            value: 
+            - !ruby/object:NWN::Gff::Struct 
+              hash: 
+                Active: !ruby/object:NWN::Gff::Element {label: Active, type: :resref, value: ""}
+                Index: !ruby/object:NWN::Gff::Element {label: Index, type: :dword, value: 1}
+                IsChild: !ruby/object:NWN::Gff::Element {label: IsChild, type: :byte, value: 0}
+              struct_id: 0
+          Quest: !ruby/object:NWN::Gff::Element {label: Quest, type: :cexostr, value: ""}
+          Script: !ruby/object:NWN::Gff::Element {label: Script, type: :resref, value: ""}
+          Sound: !ruby/object:NWN::Gff::Element {label: Sound, type: :resref, value: ""}
+          Text: !ruby/object:NWN::Gff::Element 
+            label: Text
+            str_ref: 4294967295
+            type: :cexolocstr
+            value: !ruby/object:NWN::Gff::CExoLocString 
+              languages: 
+                4: "Schon gut, lasst das umst\xE4ndliche Geschwafel und zeigt mir, was Ihr auf Lager habt."
+        struct_id: 1
+      - !ruby/object:NWN::Gff::Struct 
+        hash: 
+          AnimLoop: !ruby/object:NWN::Gff::Element {label: AnimLoop, type: :byte, value: 1}
+          Animation: !ruby/object:NWN::Gff::Element {label: Animation, type: :dword, value: 0}
+          Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}
+          Delay: !ruby/object:NWN::Gff::Element {label: Delay, type: :dword, value: 4294967295}
+          EntriesList: !ruby/object:NWN::Gff::Element 
+            label: EntriesList
+            type: :list
+            value: 
+            - !ruby/object:NWN::Gff::Struct 
+              hash: 
+                Active: !ruby/object:NWN::Gff::Element {label: Active, type: :resref, value: ""}
+                Index: !ruby/object:NWN::Gff::Element {label: Index, type: :dword, value: 2}
+                IsChild: !ruby/object:NWN::Gff::Element {label: IsChild, type: :byte, value: 0}
+              struct_id: 0
+          Quest: !ruby/object:NWN::Gff::Element {label: Quest, type: :cexostr, value: ""}
+          Script: !ruby/object:NWN::Gff::Element {label: Script, type: :resref, value: ""}
+          Sound: !ruby/object:NWN::Gff::Element {label: Sound, type: :resref, value: ""}
+          Text: !ruby/object:NWN::Gff::Element 
+            label: Text
+            str_ref: 4294967295
+            type: :cexolocstr
+            value: !ruby/object:NWN::Gff::CExoLocString 
+              languages: 
+                4: "Zum Gruss auch Euch, ich w\xFCrde gerne eine Auswahl Eurer Waren sehen."
+        struct_id: 2
+      - !ruby/object:NWN::Gff::Struct 
+        hash: 
+          AnimLoop: !ruby/object:NWN::Gff::Element {label: AnimLoop, type: :byte, value: 1}
+          Animation: !ruby/object:NWN::Gff::Element {label: Animation, type: :dword, value: 0}
+          Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}
+          Delay: !ruby/object:NWN::Gff::Element {label: Delay, type: :dword, value: 4294967295}
+          EntriesList: !ruby/object:NWN::Gff::Element 
+            label: EntriesList
+            type: :list
+            value: []
+
+          Quest: !ruby/object:NWN::Gff::Element {label: Quest, type: :cexostr, value: ""}
+          Script: !ruby/object:NWN::Gff::Element {label: Script, type: :resref, value: ""}
+          Sound: !ruby/object:NWN::Gff::Element {label: Sound, type: :resref, value: ""}
+          Text: !ruby/object:NWN::Gff::Element 
+            label: Text
+            str_ref: 4294967295
+            type: :cexolocstr
+            value: !ruby/object:NWN::Gff::CExoLocString 
+              languages: 
+                4: Nein, das ist wirklich nicht das, was ich suche. Habt dennoch meinen Dank, und auf bald.
+        struct_id: 3
+      - !ruby/object:NWN::Gff::Struct 
+        hash: 
+          AnimLoop: !ruby/object:NWN::Gff::Element {label: AnimLoop, type: :byte, value: 1}
+          Animation: !ruby/object:NWN::Gff::Element {label: Animation, type: :dword, value: 0}
+          Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}
+          Delay: !ruby/object:NWN::Gff::Element {label: Delay, type: :dword, value: 4294967295}
+          EntriesList: !ruby/object:NWN::Gff::Element 
+            label: EntriesList
+            type: :list
+            value: []
+
+          Quest: !ruby/object:NWN::Gff::Element {label: Quest, type: :cexostr, value: ""}
+          Script: !ruby/object:NWN::Gff::Element {label: Script, type: :resref, value: merchant_conv}
+          Sound: !ruby/object:NWN::Gff::Element {label: Sound, type: :resref, value: ""}
+          Text: !ruby/object:NWN::Gff::Element 
+            label: Text
+            str_ref: 4294967295
+            type: :cexolocstr
+            value: !ruby/object:NWN::Gff::CExoLocString 
+              languages: 
+                4: Ihr begutachtet die Waren eingehend.
+        struct_id: 4
     StartingList: !ruby/object:NWN::Gff::Element 
       label: StartingList
       type: :list
