ring_poison: rename

--- a/mod/uti/ring_poison.uti.yml
+++ b/mod/uti/ring_poison.uti.yml
@@ -30,7 +30,7 @@ hash: !ruby/object:NWN::Gff::Struct
       type: :cexolocstr
       value: !ruby/object:NWN::Gff::CExoLocString 
         languages: 
-          0: Ring der fahlen Gesundheit
+          0: Ring der attraktiven Blassheit
     ModelPart1: !ruby/object:NWN::Gff::Element {label: ModelPart1, type: :byte, value: 12}
     PaletteID: !ruby/object:NWN::Gff::Element {label: PaletteID, type: :byte, value: 22}
     Plot: !ruby/object:NWN::Gff::Element {label: Plot, type: :byte, value: 0}
