more generic item-based spellturning event script, obsoletes i_mindturn

--- a/mod/uti/ring_mindturn.uti.yml
+++ b/mod/uti/ring_mindturn.uti.yml
@@ -43,4 +43,15 @@ hash: !ruby/object:NWN::Gff::Struct
     Stolen: !ruby/object:NWN::Gff::Element {label: Stolen, type: :byte, value: 0}
     Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: ring_mindturn}
     TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: ring_mindturn}
+    VarTable: !ruby/object:NWN::Gff::Element 
+      label: VarTable
+      type: :list
+      value: 
+      - !ruby/object:NWN::Gff::Struct 
+        hash: 
+          Name: !ruby/object:NWN::Gff::Element {label: Name, type: :cexostr, value: spellturn_school_E}
+          Type: !ruby/object:NWN::Gff::Element {label: Type, type: :dword, value: 1}
+          Value: !ruby/object:NWN::Gff::Element {label: Value, type: :int, value: 2}
+        struct_id: 0
+
   struct_id: 4294967295
